--- a/style.css
+++ b/style.css
@@ -1,98 +1,96 @@
 body {
-  color: #fff;
-  font: 87.5%/1.5em 'Open Sans', sans-serif;
-	/* background:url(img/bg.jpg)no-repeat center center fixed;  */
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;}
-
+    color: #fff;
+    font: 87.5%/1.5em 'Open Sans', sans-serif;
+    /* background:url(img/bg.jpg)no-repeat center center fixed;  */
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 
 
 .form-wrapper {
-width:300px;
-height:329px;
-  position: absolute;
-  top: 50%;
-  left: 48%;
-  margin: -184px 0px 0px -155px;
-  background:black;
-  padding: 15px 25px;
-  border-radius: 5px;
-  box-shadow: 0px 1px 0px rgba(0,0,0,0.6),inset 0px 1px 0px rgba(255,255,255,0.04);
+    width: 300px;
+    height: 329px;
+    position: absolute;
+    top: 50%;
+    left: 48%;
+    margin: -184px 0px 0px -155px;
+    background: black;
+    padding: 15px 25px;
+    border-radius: 5px;
+    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.6), inset 0px 1px 0px rgba(255, 255, 255, 0.04);
 }
 
 .form-item {
-width:100%;
+    width: 100%;
 }
 
 
-h3{
-  font-size: 25px;
-  font-weight: 640;
-  margin-bottom: 10px;
-  color: white;
-  padding:6px;
-  font-family:'sans-serif','helvetica';
+h3 {
+    font-size: 25px;
+    font-weight: 640;
+    margin-bottom: 10px;
+    color: white;
+    padding: 6px;
+    font-family: 'sans-serif', 'helvetica';
 }
 
 
-
-.form-item input{
-  border: none;
-  background:transparent;
-  color: #fff;
-  margin-top:11px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1.2em;
-  height: 49px;
-  padding: 0 16px;
-  width: 100%;
-  padding-left: 55px;
+.form-item input {
+    border: none;
+    background: transparent;
+    color: #fff;
+    margin-top: 11px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.2em;
+    height: 49px;
+    width: 100%;
+    padding: 0 16px 0 55px;
 
 }
-input[type='password']{
-	background: transparent url("img/pass.jpg") no-repeat;
-	background-position: 10px 50%;
+
+input[type='password'] {
+    background: transparent url("img/pass.jpg") no-repeat 10px 50%;
 }
-input[type='text']{
-	background: transparent url("img/user.jpg") no-repeat;
-	background-position: 10px 50%;
+
+input[type='text'] {
+    background: transparent url("img/user.jpg") no-repeat 10px 50%;
 
 }
 
 .form-item input:focus {
-  outline: none;
-  border:1.4px solid #cfecf0;
+    outline: none;
+    border: 1.4px solid #cfecf0;
 }
 
 .button-panel {
-  margin-bottom: 20px;
-  padding-top: 10px;
-  width: 100%;
+    margin-bottom: 20px;
+    padding-top: 10px;
+    width: 100%;
 }
 
 .button-panel .button {
-  background: #00b6df;
-  border: none;
-  color: #fff;
-  cursor: pointer;
-  height: 50px;
-  font-family: 'helvetica','Open Sans', sans-serif;
-  font-size: 1.2em;
-  text-align: center;
-  text-transform: uppercase;
-  transition: background 0.6s linear;
-  width: 100%;
-  margin-top:10px;
+    background: #00b6df;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    height: 50px;
+    font-family: 'helvetica', 'Open Sans', sans-serif;
+    font-size: 1.2em;
+    text-align: center;
+    text-transform: uppercase;
+    transition: background 0.6s linear;
+    width: 100%;
+    margin-top: 10px;
 }
 
 .button:hover {
-  background: #6eb7cb;
+    background: #6eb7cb;
 }
 
 .form-item input, .button-panel .button {
-  border-radius: 2px
+    border-radius: 2px
 }
 
 /* .reminder {
